[project]
name = "quicker-connections"
description = "Quicker connections, Circuit board connections"
version = "1.1.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/phuhl/quicker-connections"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phuhl"
DisplayName = "quicker-connections"
Icon = ""
